# stock-sum

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: deployment.md  plan_1gb-memory-risk-mitigation.md  plan_24-hour-source-window.md  plan_adanos-response-cache.md  plan_adanos-trendings.md  plan_bounded-runtime-data.md  plan_cache-all-artifact-jobs.md  plan_child-worker-processes.md  plan_codebase-cleanup-after-profile-removal.md  plan_codebase-cleanup-contract-reset.md  plan_compact-vision-payload.md  plan_daily-discord-dm-report.md  plan_daily-report-debounce.md  plan_daily-report-refactor.md  plan_deepseek-llm-client.md  plan_discord-format-endpoints.md  plan_discord-fuzzy-reaction-selection.md  plan_discord-report-reply-improvements.md  plan_discord-required-parameters.md  plan_discord-statistic-fuzzy-search.md  plan_fail-safe-report-pipeline.md  plan_final-presentation-renderer.md  plan_first-run-setup.md  plan_grouped-presentation-layout.md  plan_house-ptr-collected-warnings.md  plan_house-ptr-disclosures.md  plan_in-flight-report-coalescing.md  plan_initial-architecture-setup.md  plan_management-api-discord-commands.md  plan_migrate-xpoz.md  plan_modular-refactor.md  plan_multi-call-llm-analysis.md  plan_nitter-rss-backend.md  plan_profile-config-cli.md  plan_redbot-report-cog.md  plan_reddit-rss-backend.md  plan_remembered-cli-paths.md  plan_remove-capitol-trades.md  plan_remove-http-token-ip-blacklist.md  plan_remove-profiles-unified-config.md  (+18 more)
stock_sum/: __init__.py  __main__.py  cli.py  cli_serialization.py  cli_setup.py  cli_state.py  retention.py  statistic_windowing.py  statistics.py  worker.py  worker_client.py
tests/: test_adanos_client.py  test_api.py  test_capitol_trades.py  test_catalog_cache.py  test_cli_smoke.py  test_collector_factory.py  test_config_shape.py  test_http_jobs.py  (+26 more)
(+91 files in other folders)
