[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-sum"
version = "0.1.0"
description = "Modular trading information summarization service scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "tomlkit>=0.12",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[project.scripts]
stock-sum = "stock_sum.cli:main"

[tool.setuptools.packages.find]
include = ["stock_sum*"]

[tool.setuptools.package-data]
stock_sum = ["config/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
